corpus/c/syntax/case-09/snapshots/gcc9_12/native_text_capture/render.debug.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [syntax] expected ')' before '{' token
src/main.c: In function 'main':
    2 |     if (1 {
      |        ~ ^~
      |          )
want: ) @ src/main.c:2:10
near: { token
| src/main.c:2:10
|     if (1 {
|          ^
raw:
  src/main.c:2:10: error: expected ')' before '{' token
  src/main.c: In function 'main':
      2 |     if (1 {
        |        ~ ^~
        |          )
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
explain: repair_unit=repair-unit:node-residual-compiler-0 proof=Unresolved visibility=NeverHidden
explain: member=node:residual-compiler-0 target=DiagnosticNode { node_ref: "residual-compiler-0" } unresolved=false
explain: raw_capture=stderr.raw

error: [syntax] expected expression before '}' token
    5 | }
      | ^ @ src/main.c:5:1
want: expression
near: } token
| src/main.c:5:1
| }
| ^
raw:
  src/main.c:5:1: error: expected expression before '}' token
      5 | }
        | ^
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
explain: repair_unit=repair-unit:node-residual-compiler-1 proof=Unresolved visibility=NeverHidden
explain: member=node:residual-compiler-1 target=DiagnosticNode { node_ref: "residual-compiler-1" } unresolved=false
explain: raw_capture=stderr.raw